force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <label>バウチャー</label>
    <nameField>
        <label>バウチャー番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>