force-app/main/default/objects/Voucher__c/fields/AssignDate__c.field-meta.xml
<CustomField>
    <fullName>AssignDate__c</fullName>
    <label>配布日</label>
    <type>Date</type>
</CustomField>