force-app/main/default/objects/Voucher__c/fields/AssignUser__c.field-meta.xml
<CustomField>
    <fullName>AssignUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対象者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Voucher_User</relationshipName>
    <type>Lookup</type>
</CustomField>