force-app/main/default/objects/Voucher__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <formula>TEXT(Case__r.Exam__c)</formula>
    <label>試験</label>
    <type>Text</type>
</CustomField>