force-app/main/default/objects/Voucher__c/fields/FinalDecision__c.field-meta.xml
<CustomField>
    <fullName>FinalDecision__c</fullName>
    <label>決裁</label>
    <referenceTo>FinalDecision__c</referenceTo>
    <relationshipLabel>バウチャー</relationshipLabel>
    <relationshipName>Voucher_FinalDecision</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>