force-app/main/default/objects/Voucher__c/fields/FinalDecisionAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionAmount__c</fullName>
    <formula>FinalDecision__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>決裁金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>