force-app/main/default/objects/Voucher__c/fields/FinalDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionDate__c</fullName>
    <description>メールテンプレートで使用</description>
    <formula>FinalDecision__r.Date__c</formula>
    <label>決裁日</label>
    <type>Date</type>
</CustomField>