force-app/main/default/objects/Voucher__c/fields/FinalDecisionGoal__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionGoal__c</fullName>
    <formula>FinalDecision__r.Goal__c</formula>
    <label>決裁目標</label>
    <type>Text</type>
</CustomField>