force-app/main/default/objects/Voucher__c/fields/FinalDecisionHeadcount__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionHeadcount__c</fullName>
    <formula>FinalDecision__r.Headcount__c</formula>
    <label>決裁人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>