force-app/main/default/objects/Voucher__c/fields/FinalDecisionNumber__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionNumber__c</fullName>
    <description>メールテンプレートで使用</description>
    <formula>FinalDecision__r.Name</formula>
    <label>決裁番号</label>
    <type>Text</type>
</CustomField>