force-app/main/default/objects/Voucher__c/fields/FinalDecisionTitle__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionTitle__c</fullName>
    <formula>FinalDecision__r.title__c</formula>
    <label>決裁件名</label>
    <type>Text</type>
</CustomField>