force-app/main/default/objects/Voucher__c/fields/LimitDate__c.field-meta.xml
<CustomField>
    <fullName>LimitDate__c</fullName>
    <label>期限</label>
    <type>Date</type>
</CustomField>