force-app/main/default/objects/Voucher__c/fields/UseOfReferenceProblems__c.field-meta.xml
<CustomField>
    <fullName>UseOfReferenceProblems__c</fullName>
    <formula>Case__r.UseOfReferenceProblems__c</formula>
    <label>参考問題を利用する</label>
    <type>Checkbox</type>
</CustomField>