force-app/main/default/objects/Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LimitDate__c</columns>
    <columns>Cost__c</columns>
    <columns>AssignUser__c</columns>
    <columns>AssignDate__c</columns>
    <columns>FinalDecision__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>