force-app/main/default/objects/Voucher__c/listViews/AssignedVoucher.listView-meta.xml
<ListView>
    <fullName>AssignedVoucher</fullName>
    <columns>NAME</columns>
    <columns>LimitDate__c</columns>
    <columns>Cost__c</columns>
    <columns>AssignUser__c</columns>
    <columns>AssignDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssignUser__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>割り当て済みバウチャー</label>
</ListView>